# ngf-alpha

./: CLA.md  Makefile  PATENTS  README.md  ab_geo_v4b_denoise_softDetect_tweakA.json  main-benchmark.py  pyproject.toml  requirements.txt  text_arc_unified_base_.py  tweakA_README.txt
.ipynb_checkpoints/: CLA-checkpoint.md  LICENSE-checkpoint  PATENTS-checkpoint  README-checkpoint.md  arc-benchmark-latest-checkpoint.py  main-benchmark-checkpoint.py  untitled-checkpoint.py
benchmarks/: step10.ipynb
dev/: main-benchmark-v1.py
docs/: logo5_low.drawio  onboarding.md
dynamic-intelligence/: Step5.ipynb  step6.ipynb
embed-grid/: step2.ipynb
higher-dim-embeddings/: stage5.py  step5.ipynb
llm-latent-embedding/: stage8-investigation.ipynb  stage8.py  step8.ipynb
manifold-warping/: latent_arc_denoise_100.json
pattern-completion/: stage4.ipynb  step3.ipynb
rotation-matrix/: stage3.ipynb  step3.ipynb
rudimentary-arc/: step7.ipynb
rudimentary-benchmarks/: stage10-benchmark-latest.py  stage10_llm_results.json  stage11_llm_results.json
small-benchmarks/: .gitignore  ab_geo_detect_denoise_patterned_metrics.json  ab_geo_detect_patterned_metrics.json  ab_geo_patterned_metrics.json  ab_geo_v4b_metrics.json  ab_stock_patterned_metrics.json  ab_stock_patterned_v2_metrics_extracted.json  ab_stock_patterned_v2_metrics_lastint.json  ab_stock_v3fewshot_metrics.json  arc-benchmark-colab-latest.py  arc-benchmark-colab-opt-cpu.py  arc-benchmark-colab-v1.2.py  arc-benchmark-colab-v1.py  arc-benchmark-colab-v12.py  arc-benchmark-geodesic-ode.py  arc-benchmark-script-colab.py  (+84 more)
(+1120 files in other folders)
