[project]
name = "ngf-alpha"
version = "0.1.0"
description = "Noetic Geodesic Framework (NGF) experimental benchmarks, notebooks, and demos"
requires-python = ">=3.11"
authors = [{ name = "NGF contributors" }]
dependencies = [
  "numpy==2.3.2",
  "scipy==1.16.1",
  "scikit-learn==1.7.1",
  "matplotlib==3.10.6",
  "torch==2.2.2",
  "transformers==4.56.0",
  "pillow==11.3.0",
]

[project.optional-dependencies]
dev = [
  "jupyter==1.1.1",
  "ipykernel==6.30.1",
]

[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[tool.uv]
package = false
default-groups = ["dev"]
dev-dependencies = [
  "jupyter==1.1.1",
  "ipykernel==6.30.1",
]

[dependency-groups]
dev = [
  "jupyter==1.1.1",
  "ipykernel==6.30.1",
]
